# AgentesInteligentes

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  pyproject.toml  requirements.txt
compresion/: compresion.ipynb
dq-learning/: RPS-competition-Bak.ipynb
extractor/: README.md  article.py  extractor_test.py  globals.py  neuralhive.py  newuralhive.py  publication.py  requirements.txt
neural/: AI_practica_2.ipynb  classificator.ipynb  utils.py
