[tool.poetry]
name = "agentesinteligentes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.12.0"
seaborn = "^0.12.2"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
pandas = "1.5.3"
keras-tuner = "^1.3.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
